--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "url" : "git://github.com/danstocker/candystore-canvas.git"
     },
     "dependencies"   : {
-        "bookworm"  : "0.4.0",
+        "bookworm"  : "~0.4.0",
         "candystore": "~0.9.0",
         "dessert"   : "~0.3.2",
         "evan"      : "~0.8.0",
